fix: background horizontal scroll

--- a/website/css/background.css
+++ b/website/css/background.css
@@ -1,11 +1,13 @@
 
 .circles{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
+    padding:0;
+    margin:0;
 }
 
 .circles li{
